syntax = "proto3";

package v1api;
option go_package="v1api";

import "types.proto";

message DrivesRequest {
    string nodeId = 1;
}

message DrivesResponse {
    repeated Drive disks = 1;
}

message DriveLocateRequest {
    string driveSerialNumber = 1;
    string action = 2;
}

message DriveLocateResponse {

}

service DriveService {
    rpc GetDrivesList(DrivesRequest) returns (DrivesResponse){};
    rpc Locate(DriveLocateRequest) returns (DriveLocateResponse){}
}
